# cpp-study

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  spdlogger.cpp
cmake-conf/: functions.cmake
study-shared-lib/: CMakeLists.txt  mul.cpp
study-static-lib/: CMakeLists.txt
study-static-lib/test/: sum_test.cpp
test/: demo_test.cpp
